# soi

./: .coveragerc  .dockerignore  .gitconfig  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-openvpn  Makefile  README.md  celery_ext.py  celery_int.py  celery_int_botf.py  docker-compose.dev.yml  docker-compose.testing.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
anon_app/: __init__.py  apps.py  conf.py  exceptions.py  factories.py  forms.py  models.py  proxy.py  proxy_locations.py  serializers.py  urls.py  utils.py  views.py
anon_app/ansible-playbooks/: add-swap.yml  apt-install.yml  install-docker.yml  install-ncat.yml  install-proxychains4.yml  install-zip-unzip.yml  ping.yml
anon_app/fixtures/: anon_fixture.json  fixture_botaccount.json
anon_app/migrations/: 0001_initial.py  0002_chain_task_queue_name.py  0003_auto_20200720_1233.py  0003_auto_20200720_1233_squashed_0005_auto_20200722_0704.py  0004_auto_20200723_1643.py  0005_auto_20200806_1336.py  0006_auto_20200811_0959.py  0007_auto_20200813_0820.py  0008_auto_20200819_0821.py  0009_auto_20200819_1751.py  (+91 more)
end-node/: celery.env  docker-compose.yml  filebeat.yml
env/: elasticsearch-internal.env  kibana-external.env  web-app.env  zabbix-postgres.env
ledger_app/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
lemmings_app/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  fields.py  forms.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
notifications_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
soi_app/: asgi.py  dbrouter.py  exceptions.py  settings.py  urls.py  utils.py  wsgi.py
soi_tasks/: README.md  botfarm.py  core.py  exceptions.py  internal.py  routing.py
stereotypes_generator/: apps.py  settings.py  tasks.py
(+189 files in other folders)
