[tool.poetry]
name = "soi-okenit"
version = "0.1"
description = "Anonymizer for filigree."
authors = ["okenit developers <info@okenit.ru>"]
repository = "https://gitlab.lan/filigree/soi"
readme = "README.md"
classifiers=[
 "Programming Language :: Python :: 3",
 "Operating System :: OS Independent"
]
packages = [
 {include = "anon_app"},
 {include = "ledger_app"},
 {include = "lemmings_app"},
 {include = "notifications_app"},
 {include = "soi_app"},
 {include = "soi_tasks"},
 {include = "stereotypes_generator"}
]

[tool.poetry.dependencies]
python = "^3.9"
django = "<4.0.0"
psycopg2-binary = "^2.9.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.11.0"
django-filter = "^22.0"
drf-yasg = "^1.21.0"
django-appconf = "^1.0.0"
python-logstash = "^0.4.0"
celery = {version = "5.2.7", extras = ["redis"]}
retry = "^0.9.0"
django-cors-headers = "^3.14.0"
djangorestframework-jwt = "^1.11.0"
invoke = "^2.0.0"
fabric = "^3.0.0"
ansible-runner = "2.3.4"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.0"}
py-zabbix = "^1.1.0"
graphviz = "^0.20.0"
celery-once = "^3.0.0"
django-fsm = "^2.8.0"
django-fsm-log = "^3.0.0"
dateparser = "^1.1.0"
regex = "2022.1.18"
aiohttp = "^3.8.0"
aiohttp-proxy = "0.1.2"
python-socks = "^2.1.0"
cryptography = "<=38.0.0"
django_celery_beat = "2.2.0"
lemmings-okenit = "*"
pygments = "2.16.1"
paramiko = "3.3.1"


[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"


[tool.poetry.group.testing.dependencies]
coverage = "^7.2.0"
factory-boy = "^2.12.0"


[[tool.poetry.source]]
name = "nexus"
url = "http://maven.lan:8081/repository/pypi-filigree-group/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"